# FinanceApp

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileTest  Dockerfile_t  Makefile  Pipfile  Procfile  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  backend_urls.txt  celerybeat-schedule.dir  datadump.json  db.sqlite3  docker-compose.dev.yml  freenance.log.2024-05-23  freenance.log.2024-10-02  freenance.log.2024-11-12  manage.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
FinanceBackend/: __init__.py  asgi.py  celery.py  settings.py  spectacular.py  urls.py  wsgi.py  yasg.py
FinanceFrontend/finance-app/: package-lock.json
FinanceFrontend/finance-app/public/: index.html
FinanceFrontend/finance-app/src/: App.css  App.js  index.css
FinanceFrontend/finance-app/src/Components/: Button.js  ButtonNaviBlock.js  Logo.js  MainField.js  MainFieldString.js  Navigation.js  Rectangle.css  Rectangle.js  SelectElement.js
api/: 0010_custom_update.py  admin.py  apps.py  authentication.py  backends.py  email.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
api/business_logic/: __init__.py  accumulations.py  balance.py  categories.py  errors.py  incomes.py  incomes_outcomes.py
api/locale/ru/LC_MESSAGES/: django.mo  django.po
api/middleware/: refresh.py
api/migrations/: 0001_initial.py  0002_alter_abstractcash_categories_and_more.py  0002_alter_incomecash_categories_and_more.py  0002_categories_category_type.py  0002_categories_income_outcome.py  0002_categories_is_hidden.py  0002_populate_income_categories_table.py  0003_alter_categories_category_type.py  0003_alter_incomecash_categories_and_more.py  0003_alter_incomecash_date_alter_outcomecash_date.py  0003_alter_user_email.py  0003_moneybox.py  0003_populate_outcome_categories_table.py  0004_alter_categories_category_type.py  0004_alter_user_username.py  0004_categories_is_hidden.py  0004_incomecash_date_record_outcomecash_date_record_and_more.py  0004_moneybox_category_alter_user_email.py  0005_alter_categories_category_type.py  0005_alter_incomecash_date_record_and_more.py  0005_alter_incomecash_var_sum_alter_outcomecash_var_sum.py  0005_alter_user_managers.py  0005_rename_categories_category_and_more.py  0006_alter_incomecash_date_alter_incomecash_date_record_and_more.py  0006_remove_incomes_type_remove_outcomes_type.py  0006_remove_moneybox_category_and_more.py  0006_rename_reg_sum_incomecash_constant_sum_and_more.py  0007_alter_accumulations_created_at_and_more.py  0007_alter_incomecash_constant_sum_and_more.py  0007_alter_incomecash_date_alter_outcomecash_date.py  0007_moneybox_box_type.py  0008_alter_accumulations_created_at_and_more.py  0008_alter_user_email.py  0008_remove_moneybox_box_type.py  0009_alter_accumulations_created_at_and_more.py  0009_country_user_gender_alter_accumulations_created_at_and_more.py  0009_incomecash_category_name_outcomecash_category_name_and_more.py  0009_moneybox_box_target_alter_moneybox_box_name_and_more.py  0010_alter_moneybox_box_target.py  0010_auto_20240616_1746.py  (+78 more)
api/migrations/data/: oksm.csv  oksm.json
api/models/: __init__.py  accumulations.py  base.py  category.py  common.py  countries.py  currency.py  incomes.py  operation.py  outcomes.py  profile.py  supportive.py  target.py  users.py
api/serializers/: __init__.py  accumulations.py  balance.py  category.py  countries.py  country.py  currency.py  errors.py  incomes.py  login.py  logout.py  operation.py  outcomes.py  profile.py  reports.py  target.py  user.py  user_profile.py  vkchecktoken.py  vklogout.py
api/signals/: upd_user_after_reg.py
api/templates/: index.html
api/templates/djoser/email/: activation.html
api/tests/: test_url.py  test_urls.py  test_view.py  test_views.py
api/validators/: __init__.py  email_validator.py  letters_symbols_password_validator.py  maximum_length_password_validator.py  refresh.py  spectacular_extensions.py  swagger_auth.py  token.py
api/views/: __init__.py  accumulations.py  activate_users.py  balance.py  categories.py  cheque.py  countries.py  currency.py  errors.py  generate_token.py  importdata.py  importpdf.py  income_categories.py  incomes.py  login.py  logout.py  operation.py  outcome_categories.py  outcomes.py  password_reset.py  profile.py  reports.py  targets.py  users_personal_data.py  vkauth.py  vkchecktoken.py  vklogout.py
k8s/: BackendDeploymentDev.yaml  BackendDeploymentProd.yaml  BackendDeploymentQa.yaml  BackendOnly.yaml  DeploymetBackendDev.yaml  DeploymetDatabaseDev.yaml  DeploymetDatabaseProd.yaml  DeploymetDatabaseQa.yaml
static/: staticfiles.json
static/drf_spectacular_sidecar/redoc/bundles/: redoc.standalone.081cec0c1b60.js
staticfiles/drf_spectacular_sidecar/swagger-ui-dist/: swagger-ui-standalone-preset.4fe6d94148f8.js
