[tool.poetry]
name = "financeapp"
version = "0.1.0"
description = ""
authors = ["TannedRose <smirnoffmir2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
attrs = "24.2.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
cryptography = "43.0.3"
defusedxml = "0.8.0rc2"
distlib = "0.3.9"
django = "5.1.3"
django-cors-headers = "4.6.0"
django-filter = "24.3"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
djoser = "2.3.1"
drf-extra-fields = "3.7.0"
drf-spectacular = "0.27.2"
drf-spectacular-sidecar = "2024.11.1"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
filetype = "1.2.0"
idna = "3.10"
image = "1.5.33"
importlib-metadata = "8.5.0"
inflection = "0.5.1"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
keyring = "24.3.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
oauthlib = "3.2.2"
packaging = "24.2"
pexpect = "4.9.0"
pillow = "11.0.0"
pkginfo = "1.11.2"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
psycopg2 = "2.9.10"
ptyprocess = "0.7.0"
pycparser = "2.22"
pygments = "2.18.0"
pyjwt = "2.10.0"
pyproject-hooks = "1.2.0"
python-dotenv = "1.0.1"
python3-openid = "3.2.0"
pywin32-ctypes = "0.2.3"
pyyaml = "6.0.2"
rapidfuzz = "3.10.1"
referencing = "0.35.1"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.21.0"
shellingham = "1.5.4"
six = "1.16.0"
social-auth-app-django = "5.4.2"
social-auth-core = "4.5.4"
sqlparse = "0.5.2"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
typing-extensions = "4.12.2"
tzdata = "2024.2"
uritemplate = "4.1.1"
urllib3 = "2.2.3"
virtualenv = "20.27.1"
whitenoise = "6.8.2"
zipp = "3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
