[tool.poetry]
name = "financeapp"
version = "0.1.0"
description = ""
authors = ["TannedRose <smirnoffmir2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.3"
django-cors-headers = "4.6.0"
django-filter = "24.3"
djangorestframework = "3.15.2"
djoser = "2.3.1"
drf-extra-fields = "3.7.0"
drf-spectacular = "0.27.2"
drf-spectacular-sidecar = "2024.11.1"
drf-yasg = "1.21.8"
gunicorn = "23.0.0"
pillow = "11.0.0"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
requests = "2.32.3"
rich = "13.9.4"
types-requests = "2.32.0.20241016"
whitenoise = "6.8.2"
django-stubs = "4.2.7"
djangorestframework-stubs = {version = "1.7.0", extras = ["compatible-mypy"]}

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.6"
rich = "^13.5.2"
setuptools = "*"
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
